--- a/Egov_WEB/src/main/webapp/WEB-INF/web.xml
+++ b/Egov_WEB/src/main/webapp/WEB-INF/web.xml
@@ -58,6 +58,13 @@
 	<login-config>
 		<auth-method>BASIC</auth-method>
 	</login-config>
+	
+	<jsp-config> 
+	  <taglib> 
+		  <taglib-uri>http://Egov_WEB/mypage</taglib-uri> 
+		  <taglib-location>/tlds/taglib.tld</taglib-location> 
+	  </taglib>
+   </jsp-config>
     
 	<error-page>
 		<exception-type>java.lang.Throwable</exception-type>
